--- a/GM.html
+++ b/GM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>ああああああああああああ</title>
+	<title>あああああああああああuあ</title>
 	<style>
 		#degita {
 			position: absolute;
