--- a/GM.html
+++ b/GM.html
@@ -123,7 +123,7 @@ canvas.width = screen.width - 50  ;	//canvasの横幅（よこはば）
 canvas.height = screen.height - 50  ;	//canvasの縦幅（たてはば）
 
 if (window.screen.height > window.screen.width){
-canvas1.width = sceen.width - 50  ;	
+canvas1.width = screen.width - 50  ;	
 canvas1.height = (screen.height - screen.width ) - 50  ;	
 }else{canvas1.height = 1}
 
