--- a/GM2.html
+++ b/GM2.html
@@ -124,7 +124,7 @@ canvas.height = window.innerHeight - 50  ;	//canvasの縦幅（たてはば）
 
 if (innerHeight > innerWidth){
 canvas1.width = window.innerWidth - 50  ;	
-canvas1.height = (window.innerHeight - window.innerWidth ) - 50  ;	
+canvas1.height = (window.innerHeight - window.innerWidth )  ;	
 }else{canvas1.height = 1}
 
 
