--- a/GM.html
+++ b/GM.html
@@ -317,14 +317,13 @@ var habataka = window.innerHeight  / window.innerWidth
 
 var ctly = 0//＋の場所
 if (window.innerWidth * 1.2 > window.innerHeight ){ctly = window.innerHeight / 2} 
-if (window.innerHeight >= window.innerWidth * 1.2){ctly = window.innerWidth + (window.innerHeight - window.innerWidth) / 2 }
+if (window.innerHeight >= window.innerWidth * 1.2){ctly = window.innerWidth + (window.innerHeight - window.innerWidth) / 2 - 50}
 
 
 function mouse(x,y,a){//a は　down/start (0) かmove(1)かup(2)か。
   var xx = ((window.innerWidth / 2) - (x)) ** 2 
   var yy = ((ctly) - (y)) ** 2
- te = yy + 'u'
- if (te == '' && key.x == 0 && key.y == 0　&& s0 == 0){
+  if (te == '' && key.x == 0 && key.y == 0　&& s0 == 0){
   if ((x <  window.innerWidth / 2 ) && (xx > yy)) {key.x = -10;key.y = 0};
   if ((x >  window.innerWidth / 2 ) && (xx > yy)) {key.x = 10;key.y = 0 };
   if ((y <  ctly ) && (xx < yy)) {key.y = -10;key.x = 0};
@@ -484,16 +483,16 @@ if (s0 == 0) {
 
 }
 
-
+if (n == 0){
 if (s0 == 1){
  if (s1 < 0){s1 = 1}
  if (s1 > 1){s1 = 0}
 }
-if (s0 == 2){//te = sss(0) + '話す' + sss(1) + '道具' + sss(2) + '調べる'
+if (s0 == 2){te = sss(0) + '話す' + sss(1) + '道具' + sss(2) + '調べる'
  if (s1 < 0){s1 = 2}
  if (s1 > 2){s1 = 0}
 }
-
+}else{s0 == 0}
 //:::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 //テキスト描画系
