--- a/GM.html
+++ b/GM.html
@@ -484,15 +484,15 @@ if (s0 == 0) {
 }
 
 if (n == 0){
-if (s0 == 1){
+ if (s0 == 1){
  if (s1 < 0){s1 = 1}
  if (s1 > 1){s1 = 0}
-}
-if (s0 == 2){te = sss(0) + '話す' + sss(1) + '道具' + sss(2) + '調べる'
+ }
+ if (s0 == 2){te = sss(0) + '話す' + sss(1) + '道具' + sss(2) + '調べる'
  if (s1 < 0){s1 = 2}
  if (s1 > 2){s1 = 0}
-}
-}else{s0 == 0}
+ }
+}else{s0 = 0}
 //:::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 //テキスト描画系
