--- a/GM.html
+++ b/GM.html
@@ -480,14 +480,8 @@ if (s0 == 0) {
 
  }
 
-
-if (n == 0){
- if (s0 == 2){te = sss(0) + '話す' + sss(1) + '道具' + sss(2) + '調べる'}
-}
-if (n == 1){
-if (s0 == 2){s0 = 0;te = ''}
+if (s0 == 2 && n == 1){s0 = 0;te = ''}
 	
-}
 	
 }//push
 	//超えてないか監視
@@ -497,6 +491,7 @@ if (s0 == 2){s0 = 0;te = ''}
  }
 
 if (s0 == 2){
+te = sss(0) + '話す' + sss(1) + '道具' + sss(2) + '調べる'
  if (s1 < 0){s1 = 2}
  if (s1 > 2){s1 = 0}
  }
